--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
 
 				var fullMessage;
 				var messageID = ""; // Global variable to store the message ID
-				var oldMessageID;
+				var oldMessageID ="";
 
 				function displayText(message) {
 					var messageDisplayDiv = document.getElementById("messageDisplayDiv");
