--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1234,13 +1234,13 @@ $avatar_passage
 &lt;&lt;liveblock&gt;&gt;
 $hachi_passage
 
-&lt;&lt;if $hachi_narrating == &quot;hachi_tram2_00false&quot; and $hachi_movement == &quot;Wagging its tail&quot;&gt;&gt;
+&lt;&lt;if $hachi_narrating == &quot;hachi_tram2_00false&quot; and $hachi_part_mov == &quot;tail&quot;&gt;&gt;
   &lt;&lt;set $hachi_passage to &quot;hachi_tram2_01/Hachi greets Leo wagging his tail and eager barks, happy to see a familiar face. Somehow it was like Hachi was trying to say: &#39;Hi, Leo! I&#39;m looking for Buro. Have you seen him today?&#39;&quot;&gt;&gt;
 &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_tram2_00false&quot;&gt;&gt;
-  &lt;&lt;if $hachi_movement !== &quot;Wagging its tail&quot; and $hachi_movement !==&quot;none&quot; and $hachi_movement !== &quot;&quot;&gt;&gt;
+  &lt;&lt;if $hachi_part_mov !== &quot;tail&quot; and $hachi_movement !==&quot;none&quot; and $hachi_movement !== &quot;&quot;&gt;&gt;
 	&lt;&lt;include &quot;commentMovement_hachi&quot;&gt;&gt;
   &lt;&lt;/if&gt;&gt;
 &lt;&lt;/if&gt;&gt;
@@ -1293,13 +1293,13 @@ After getting of the tram, Leo said to Hachi, &#39;Well, well, if it isn&#39;t H
 &lt;&lt;liveblock&gt;&gt;
 $hachi_passage
 
-&lt;&lt;if $hachi_narrating == &quot;hachi_tram4_00false&quot; and ($hachi_movement == &quot;Barking&quot; || $hachi_movement == &quot;Sniffing&quot; || $hachi_movement == &quot;Wagging its tail&quot;)&gt;&gt;
+&lt;&lt;if $hachi_narrating == &quot;hachi_tram4_00false&quot; and ($hachi_movement == &quot;Barking&quot; || $hachi_movement == &quot;Sniffing&quot; || $hachi_part_mov == &quot;tail&quot;)&gt;&gt;
   &lt;&lt;set $hachi_passage to &quot;hachi_tram4_01/You and Buro make quite the pair, Hachi. You know, I&#39;ve seen him chatting with Mr. Al Mansouri. Maybe you should go check there! Or maybe you can visit Mrs. Novakova near the fountain, I am sure she might have seen him too.&#39;&quot;+$hachi_bank&gt;&gt;
 &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_tram4_00false&quot;&gt;&gt;
-  &lt;&lt;if $hachi_movement !== &quot;Barking&quot; and $hachi_movement !== &quot;Sniffing&quot; and $hachi_movement !== &quot;Wagging its tail&quot; and $hachi_movement !==&quot;none&quot; and $hachi_movement !== &quot;&quot;&gt;&gt;
+  &lt;&lt;if $hachi_movement !== &quot;Barking&quot; and $hachi_movement !== &quot;Sniffing&quot; and $hachi_part_mov !== &quot;tail&quot; and $hachi_movement !==&quot;none&quot; and $hachi_movement !== &quot;&quot;&gt;&gt;
 	&lt;&lt;include &quot;commentMovement_hachi&quot;&gt;&gt;
   &lt;&lt;/if&gt;&gt;
 &lt;&lt;/if&gt;&gt;
@@ -1521,13 +1521,13 @@ $hachi_passage
 &lt;&lt;liveblock&gt;&gt;
 $hachi_passage
 
-&lt;&lt;if $hachi_narrating == &quot;hachi_bank1_00false&quot; and ($hachi_movement == &quot;Barking&quot; || $hachi_movement == &quot;Wagging its tail&quot;)&gt;&gt;
+&lt;&lt;if $hachi_narrating == &quot;hachi_bank1_00false&quot; and ($hachi_movement == &quot;Barking&quot; || $hachi_part_mov == &quot;tail&quot;)&gt;&gt;
   &lt;&lt;set $hachi_passage to &quot;hachi_bank1_01/Hachi approaches Ms. Suarez, the bank teller, with a friendly wag of his tail, silently conveying his question about Buro&#39;s whereabouts. &#39;Well hello there, Hachi! I&#39;m Lina.&#39; said Ms. Suarez with a big smile. You seem a bit lost without Buro. Haven&#39;t seen him today, I&#39;m afraid.&quot;&gt;&gt;
 &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_tram1_00false&quot;&gt;&gt;
-  &lt;&lt;if $hachi_movement !== &quot;Barking&quot; and $hachi_movement !== &quot;Wagging its tail&quot; and $hachi_movement !==&quot;none&quot; and $hachi_movement !== &quot;&quot;&gt;&gt;
+  &lt;&lt;if $hachi_movement !== &quot;Barking&quot; and $hachi_part_mov !== &quot;tail&quot; and $hachi_movement !==&quot;none&quot; and $hachi_movement !== &quot;&quot;&gt;&gt;
 	&lt;&lt;include &quot;commentMovement_hachi&quot;&gt;&gt;
   &lt;&lt;/if&gt;&gt;
 &lt;&lt;/if&gt;&gt;
@@ -1666,13 +1666,13 @@ $hachi_passage
 &lt;&lt;liveblock&gt;&gt;
 $hachi_passage
 
-&lt;&lt;if $hachi_narrating == &quot;hachi_fountain4_00false&quot; and $hachi_movement == &quot;Wagging its taill&quot;&gt;&gt;
+&lt;&lt;if $hachi_narrating == &quot;hachi_fountain4_00false&quot; and $hachi_part_mov == &quot; tail&quot;&gt;&gt;
   &lt;&lt;set $hachi_passage to &quot;hachi_fountain4_01/Ah, look what I found! Perhaps a little luck will come your way if you fetch it, my furry friend. Maybe it belongs to someone going to the tram stop or buying some gum in the shop at the old building close by.&quot;+$hachi_bank&gt;&gt;
   &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_fountain4_00false&quot;&gt;&gt;
-  &lt;&lt;if $hachi_movement !==&quot;Wagging its tail&quot; and $hachi_movement !==&quot;none&quot; and $hachi_movement !== &quot;&quot;&gt;&gt;
+  &lt;&lt;if $hachi_part_mov !==&quot;tail&quot; and $hachi_movement !==&quot;none&quot; and $hachi_movement !== &quot;&quot;&gt;&gt;
 	&lt;&lt;include &quot;commentMovement_hachi&quot;&gt;&gt;
   &lt;&lt;/if&gt;&gt;
 &lt;&lt;/if&gt;&gt;
