--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1229,13 +1229,13 @@ $avatar_passage
 &lt;&lt;/nobr&gt;&gt;
 
 </tw-passagedata><tw-passagedata pid="24" name="hachi_tram_2" tags="" position="1025,1000" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set $hachi_passage to &quot;hachi_tram2_00/Leo gave Hachi a small pat in his head&quot;&gt;&gt;
+&lt;&lt;set $hachi_passage to &quot;hachi_tram2_00/Leo gave Hachi a small pat in his head/m_compliment&quot;&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
 $hachi_passage
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_tram2_00false&quot; and $hachi_part_mov == &quot;tail&quot;&gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_tram2_01/Hachi greets Leo wagging his tail and eager barks, happy to see a familiar face. Somehow it was like Hachi was trying to say: &#39;Hi, Leo! I&#39;m looking for Buro. Have you seen him today?&#39;&quot;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_tram2_01/Hachi greets Leo wagging his tail and eager barks, happy to see a familiar face. Somehow it was like Hachi was trying to say: &#39;Hi, Leo! I&#39;m looking for Buro. Have you seen him today?&#39;/barking1&quot;&gt;&gt;
 &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
@@ -1262,7 +1262,7 @@ $hachi_passage
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_tram1_00false&quot; and $hachi_movement == &quot;Sniffing&quot;&gt;&gt;
   &lt;&lt;set $hachi_passage to &quot;hachi_tram1_01/Hachi sniffs the air, detecting the approach of Leo, the friendly tram conductor whose shift was ending.
-After getting of the tram, Leo said to Hachi, &#39;Well, well, if it isn&#39;t Hachi! What&#39;s got your nose twitching today, buddy?&#39;&quot;&gt;&gt;
+After getting of the tram, Leo said to Hachi, &#39;Well, well, if it isn&#39;t Hachi! What&#39;s got your nose twitching today, buddy?&#39;/m_talk2&quot;&gt;&gt;
 &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
@@ -1282,7 +1282,7 @@ After getting of the tram, Leo said to Hachi, &#39;Well, well, if it isn&#39;t H
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="26" name="hachi_tram_4" tags="" position="1150,1000" size="100,100">&lt;&lt;nobr&gt;&gt;
 &lt;&lt;set $hachi_turn = $hachi_turn+1&gt;&gt;
-&lt;&lt;set $hachi_passage to &quot;hachi_tram4_00/Leo recognizes Hachi and Buro’s friendship and tells Hachi about Lina, the bank teller and Ms. Novakova at the fountain.&quot;&gt;&gt;
+&lt;&lt;set $hachi_passage to &quot;hachi_tram4_00/Leo recognizes Hachi and Buro’s friendship and tells Hachi about Lina, the bank teller and Ms. Novakova at the fountain./m_talk4&quot;&gt;&gt;
 
 &lt;&lt;if $hachi_turn == 3&gt;&gt;
 &lt;&lt;set $hachi_bank to &quot;Or you can also visit the bank. It recently opened&quot;&gt;&gt;
@@ -1313,13 +1313,13 @@ $hachi_passage
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="27" name="hachi_tram_3" tags="" position="1150,875" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set $hachi_passage to &quot;hachi_tram3_00/Leo then puts his hand in his pocket; Hachi knows what this means...&quot;&gt;&gt;
+&lt;&lt;set $hachi_passage to &quot;hachi_tram3_00/Leo then puts his hand in his pocket; Hachi knows what this means.../m_aha&quot;&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
 $hachi_passage
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_tram3_00false&quot; and $hachi_movement == &quot;Barking&quot;&gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_tram3_01/Leo notices Hachi&#39;s responsiveness and rewards him with a tasty treat from his pocket. &#39;Here you go, Hachi! A little snack for being such a good boy. Now, where&#39;s your buddy?&#39;&quot;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_tram3_01/Leo notices Hachi&#39;s responsiveness and rewards him with a tasty treat from his pocket. &#39;Here you go, Hachi! A little snack for being such a good boy. Now, where&#39;s your buddy?&#39;/m_giftgiver&quot;&gt;&gt;
 &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
@@ -1338,7 +1338,7 @@ $hachi_passage
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="28" name="hachi_stairs_1" tags="" position="1025,1200" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set $hachi_passage to &quot;hachi_stairs1_00/Hachi climbs the stairs of an old building, where he encounters Mr. Al Mansouri and his companion Blue, the flightless falcon. Mr. Al Mansouri, and old Emirati sailor, shares stories about Buro&#39;s visits to the building&#39;s convenience store, where he buys a pack of gum and engages in conversations about the sea stories. Blue interjects with squawks of agreement, adding to the lively conversation.&quot;&gt;&gt;
+&lt;&lt;set $hachi_passage to &quot;hachi_stairs1_00/Hachi climbs the stairs of an old building, where he encounters Mr. Al Mansouri and his companion Blue, the flightless falcon. Mr. Al Mansouri, and old Emirati sailor, shares stories about Buro&#39;s visits to the building&#39;s convenience store, where he buys a pack of gum and engages in conversations about the sea stories. Blue interjects with squawks of agreement, adding to the lively conversation./fastfood&quot;&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
 $hachi_passage
@@ -1373,13 +1373,13 @@ $hachi_passage
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="29" name="hachi_stairs_3" tags="" position="1025,1325" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set $hachi_passage to &quot;hachi_stairs3_00/Hachi attempts to mimic Blue&#39;s squawks, adding to the lively conversation and earning a laugh from Mr. Al Mansouri.&quot;&gt;&gt;
+&lt;&lt;set $hachi_passage to &quot;hachi_stairs3_00/Hachi attempts to mimic Blue&#39;s squawks, adding to the lively conversation and earning a laugh from Mr. Al Mansouri./f_cheeree&quot;&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
 $hachi_passage
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_stairs3_00false&quot; and $hachi_movement == &quot;Barking&quot;&gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_stairs3_01/Hachi barks! &#39;Squawk! Squawk! Like this, Blue? Hehe!, Hachi thought to himself&#39;&quot;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_stairs3_01/Hachi barks! &#39;Squawk! Squawk! Like this, Blue? Hehe!, Hachi thought to himself&#39;/barking2&quot;&gt;&gt;
   &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
@@ -1398,17 +1398,17 @@ $hachi_passage
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="30" name="hachi_stairs_2" tags="" position="1150,1200" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set $hachi_passage to &quot;hachi_stairs2_00/Hachi notices Mr. Al Mansouri candy stall at the old building, captivated the intense colour of the falcon standing on his shoulder.&quot;&gt;&gt;
+&lt;&lt;set $hachi_passage to &quot;hachi_stairs2_00/Hachi notices Mr. Al Mansouri candy stall at the old building, captivated the intense colour of the falcon standing on his shoulder.&quot;/falcon&gt;&gt;
 &lt;&lt;liveblock&gt;&gt;
 $hachi_passage
 
-&lt;&lt;if $hachi_narrating == &quot;hachi_stairs2_00false&quot; and $hachi_movement == &quot;Wagging its tail&quot;&gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_stairs2_01/Mr. Al Mansouri: &#39;Welcome, little friend! Sit with us and hear tales of adventure on the high seas. Once upon a time, in the heart of the Gulf Sea...&#39;&quot;&gt;&gt;
+&lt;&lt;if $hachi_narrating == &quot;hachi_stairs2_00false&quot; and $hachi_part_mov == &quot;tail&quot;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_stairs2_01/Mr. Al Mansouri: &#39;Welcome, little friend! Sit with us and hear tales of adventure on the high seas. Once upon a time, in the heart of the Gulf Sea...&#39;/gulls&quot;&gt;&gt;
   &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_stairs2_00false&quot;&gt;&gt;
-  &lt;&lt;if $hachi_movement !==&quot;Wagging its tail&quot; and $hachi_movement !==&quot;none&quot; and $hachi_movement !== &quot;&quot;&gt;&gt;
+  &lt;&lt;if $hachi_part_mov !==&quot;tail&quot; and $hachi_movement !==&quot;none&quot; and $hachi_movement !== &quot;&quot;&gt;&gt;
 	&lt;&lt;include &quot;commentMovement_hachi&quot;&gt;&gt;
   &lt;&lt;/if&gt;&gt;
 &lt;&lt;/if&gt;&gt;
@@ -1423,7 +1423,7 @@ $hachi_passage
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="31" name="hachi_stairs_4" tags="" position="1150,1325" size="100,100">&lt;&lt;nobr&gt;&gt;
 &lt;&lt;set $hachi_turn = $hachi_turn+1&gt;&gt;
-&lt;&lt;set $hachi_passage to &quot;hachi_stairs4_00/As Mr. Al Mansouri continues his story, he notices Hachi&#39;s anxious behavior and realizes that Buro is not with him.&quot;&gt;&gt;
+&lt;&lt;set $hachi_passage to &quot;hachi_stairs4_00/As Mr. Al Mansouri continues his story, he notices Hachi&#39;s anxious behavior and realizes that Buro is not with him./m_intrigued&quot;&gt;&gt;
 
 &lt;&lt;if $hachi_turn == 3&gt;&gt;
 &lt;&lt;set $hachi_bank to &quot;Or you can also visit the bank. It recently opened&quot;&gt;&gt;
@@ -1566,13 +1566,13 @@ $hachi_passage
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="36" name="hachi_fountain_2" tags="" position="1650,1000" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set $hachi_passage to &quot;hachi_fountain2_00/Hachi lays beside Mrs. Novakova as she feeds the pigeons, watching them flutter and coo around her&quot;&gt;&gt;
+&lt;&lt;set $hachi_passage to &quot;hachi_fountain2_00/Hachi lays beside Mrs. Novakova as she feeds the pigeons, watching them flutter and coo around her/pigeon2&quot;&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
 $hachi_passage
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_fountain2_00false&quot; and $hachi_movement == &quot;Barking&quot;&gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_fountain2_01/Mrs. Novakova: &#39;Look at them, dear. Majestic creatures, aren&#39;t they? They remind me of my days on stage, gliding and twirling with grace,&#39; drawing a smile in her face. Come, stand next to me.&quot;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_fountain2_01/Mrs. Novakova: &#39;Look at them, dear. Majestic creatures, aren&#39;t they? They remind me of my days on stage, gliding and twirling with grace,&#39; drawing a smile in her face. Come, stand next to me./f_compliment&quot;&gt;&gt;
  &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
@@ -1591,13 +1591,13 @@ $hachi_passage
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="37" name="hachi_fountain_1" tags="" position="1650,875" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set $hachi_passage to &quot;hachi_fountain1_00/At the fountain, Hachi meets a nice older woman named Mrs. Novakova, a former Czech ballerina, who feeds the pigeons. She tells Hachi about Buro&#39;s routine of tossing a coin into the fountain every morning, hoping for his wishes to come true.&quot;&gt;&gt;
+&lt;&lt;set $hachi_passage to &quot;hachi_fountain1_00/At the fountain, Hachi meets a nice older woman named Mrs. Novakova, a former Czech ballerina, who feeds the pigeons. She tells Hachi about Buro&#39;s routine of tossing a coin into the fountain every morning, hoping for his wishes to come true./park2&quot;&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
 $hachi_passage
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_fountain1_00false&quot; and $hachi_tag == 24&gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_fountain1_01/Hachi approaches Mrs. Novakova, intrigued by her presence at the fountain, and listens attentively as she shares stories.&quot;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_fountain1_01/Hachi approaches Mrs. Novakova, intrigued by her presence at the fountain, and listens attentively as she shares stories./fountain&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_fountain1_00false&quot;&gt;&gt;
@@ -1607,7 +1607,7 @@ $hachi_passage
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_fountain1_01false&quot; and $hachi_part_dir == &quot;down&quot; and $hachi_part_mov == &quot;head&quot;&gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_fountain1_02/Mrs. Novakova: &#39;Ah, hello there, furry one. Lay next to me and let me tell you about the days of my youth, dancing across stages far and wide,&#39; while petting Hachi’s head.&quot;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_fountain1_02/Mrs. Novakova: &#39;Ah, hello there, furry one. Lay next to me and let me tell you about the days of my youth, dancing across stages far and wide,&#39; while petting Hachi’s head./f_sing&quot;&gt;&gt;
 &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
@@ -1625,7 +1625,7 @@ $hachi_passage
 $hachi_passage
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_fountain2_01false&quot; and ($hachi_movement == &quot;Standing on its front leg&quot; || $hachi_movement == &quot;Standing on its back leg&quot;)&gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_fountain3_00/Mrs. Novakova notices that Hachi feels worried.&quot;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_fountain3_00/Mrs. Novakova notices that Hachi feels worried./f_intrigued&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_fountain3_00false&quot;&gt;&gt;
@@ -1635,7 +1635,7 @@ $hachi_passage
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_fountain3_00false&quot; and $hachi_movement == &quot;Barking&quot;&gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_fountain3_01/Mrs. Novakova: &#39;Where is your friend? Have you see him, dear? Keep your eyes peeled. He may be closer than you think.&#39; She said with her lovely Eastern European accent.&quot;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_fountain3_01/Mrs. Novakova: &#39;Where is your friend? Have you see him, dear? Keep your eyes peeled. He may be closer than you think.&#39; She said with her lovely Eastern European accent./f_talk3&quot;&gt;&gt;
 &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
@@ -1655,7 +1655,7 @@ $hachi_passage
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="39" name="hachi_fountain_4" tags="" position="1775,1000" size="100,100">&lt;&lt;nobr&gt;&gt;
 &lt;&lt;set $hachi_turn = $hachi_turn+1&gt;&gt;
-&lt;&lt;set $hachi_passage to &quot;hachi_fountain4_00/Mrs. Novakova spots a shiny coin near the fountain&#39;s edge and encourages Hachi to retrieve it.&quot;&gt;&gt;
+&lt;&lt;set $hachi_passage to &quot;hachi_fountain4_00/Mrs. Novakova spots a shiny coin near the fountain&#39;s edge and encourages Hachi to retrieve it./f_agreeable&quot;&gt;&gt;
 
 &lt;&lt;if $hachi_turn == 3&gt;&gt;
 &lt;&lt;set $hachi_bank to &quot;Or you can also visit the bank. It recently opened&quot;&gt;&gt;
@@ -1666,7 +1666,7 @@ $hachi_passage
 &lt;&lt;liveblock&gt;&gt;
 $hachi_passage
 
-&lt;&lt;if $hachi_narrating == &quot;hachi_fountain4_00false&quot; and $hachi_part_mov == &quot; tail&quot;&gt;&gt;
+&lt;&lt;if $hachi_narrating == &quot;hachi_fountain4_00false&quot; and $hachi_part_mov == &quot;tail&quot;&gt;&gt;
   &lt;&lt;set $hachi_passage to &quot;hachi_fountain4_01/Ah, look what I found! Perhaps a little luck will come your way if you fetch it, my furry friend. Maybe it belongs to someone going to the tram stop or buying some gum in the shop at the old building close by.&quot;+$hachi_bank&gt;&gt;
   &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
