--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1398,7 +1398,7 @@ $hachi_passage
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="30" name="hachi_stairs_2" tags="" position="1150,1200" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set $hachi_passage to &quot;hachi_stairs2_00/Hachi notices Mr. Al Mansouri candy stall at the old building, captivated the intense colour of the falcon standing on his shoulder.&quot;/falcon&gt;&gt;
+&lt;&lt;set $hachi_passage to &quot;hachi_stairs2_00/Hachi notices Mr. Al Mansouri candy stall at the old building, captivated the intense colour of the falcon standing on his shoulder./falcon&quot;&gt;&gt;
 &lt;&lt;liveblock&gt;&gt;
 $hachi_passage
 
