--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1693,12 +1693,12 @@ $hachi_passage
 &lt;&lt;liveblock&gt;&gt;
 &lt;&lt;if $avatar_narrating == &quot;both_00false&quot;&gt;&gt;
 	&lt;&lt;set $avatar_passage to &quot;both_01/Each day, they meet at small park and explore their city. But today, fate intervenes as they wander through the streets and alleys, and Hachi finds himself separated from Buro. 
-Today, will be a different day./park3&gt;&gt;
+Today, will be a different day./park3&quot;&gt;&gt;
   &lt;&lt;/if&gt;&gt;
   
   &lt;&lt;if $hachi_narrating == &quot;both_00false&quot;&gt;&gt;
 	&lt;&lt;set $hachi_passage to &quot;both_01/Each day, they meet at small park and explore their city. But today, fate intervenes as they wander through the streets and alleys, and Hachi finds himself separated from Buro. 
-Today, will be a different day./park3&gt;&gt;
+Today, will be a different day./park3&quot;&gt;&gt;
   &lt;&lt;/if&gt;&gt;
   
 &lt;&lt;if $avatar_narrating == &quot;both_01false&quot;&gt;&gt;
