--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1162,7 +1162,7 @@ $hachi_passage
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_act2false&quot; and $hachi_part_mov !== &quot;none&quot;&gt;&gt;
   &lt;&lt;set $hachi_passage to &quot;hachi_act2_01/&#39;Greetings, furry friend! I am Lucia, guardian of this enchanted flower. You must be Hachi, the loyal Akita. Fate has brought you to me for a special purpose.
- &#39;Hachi&#39;s ears perk up with interest as Lucia explains the reason for their meeting./talking2&quot;&gt;&gt;
+ &#39;Hachi&#39;s ears perk up with interest as Lucia explains the reason for their meeting./fairy&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_act2_01false&quot; and $hachi_part_mov !== &quot;none&quot;&gt;&gt;
