--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2148,6 +2148,9 @@ async function getClosestStopsAndDepartures(longitude, latitude, radius) {
     return null;
   }
 }
+
+getClosestStopsAndDepartures(longitude, latitude, radius)
+
 &lt;&lt;/script&gt;&gt;</tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
 	/*! SugarCube JS */
