--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2083,7 +2083,7 @@ let departureTime;
 let stopName;
 let longitude = 16.60062;
 let latitude =49.19177;
-let radious = 200;
+let radius = 200;
 
 async function getClosestStopsAndDepartures(longitude, latitude, radius) {
   const apiKey = &#39;gYW4HBUHK9kB5j8wDxwxGglMKrWl9P9J&#39;;
