--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2080,6 +2080,7 @@ console.log(variables().hachi_comment);
 let tripHeadSign;
 let routeShortName;
 let departureTime;
+let minutesUntilDeparture;
 let stopName;
 let longitude = 16.60062;
 let latitude =49.19177;
